MS Edge reporting overflow on modal-background, trying to fix

--- a/what2do2day/static/assets/css/style.css
+++ b/what2do2day/static/assets/css/style.css
@@ -911,6 +911,7 @@ nav.level.is-primary .level-item {
 
 .modal, .modal-background {
     width: 100vw;
+    max-width: 100%;
 }
 
 .modal-card {
